<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <!-- Scrollable Content -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:text="Freq"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/frequencyItemView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:inputType="number"
                android:text="@string/frequency"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:text="Call Sign"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/Country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/callSignItemView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:text="Location"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/locationItemView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/location"
                android:textSize="18sp" />



            <!-- Receive S-value Dropdown -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:text="Receive S-Value"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/receiveSValueSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <!-- Send S-value Dropdown -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:text="@string/send_s_value"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/sendSValueSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <DatePicker
                android:id="@+id/SpotdatePicker"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:spinnersShown="true" />

            <TimePicker
                android:id="@+id/SpottimePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:timePickerMode="spinner" />
        </LinearLayout>
    </ScrollView>

    <!-- Buttons Fixed at the Bottom -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="8dp">

        <Button
            android:id="@+id/SendSpot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/teal_200"
            android:text="@string/send_spot"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/openLinkButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/teal_200"
            android:textColor="@color/white"
            android:text="@string/open_qrz" />

        <!-- Set Frequency Button -->
        <Button
            android:id="@+id/setFrequencyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_frequency"
            android:backgroundTint="@color/teal_200"
            android:textColor="@color/white" />

        <!-- Save to Log Book Button -->
        <Button
            android:id="@+id/saveLogButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_to_log_book"
            android:backgroundTint="@color/teal_200"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>
